tutorial updated, added anchor to tutorial

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html ng-app="turbo-batman">
     <head>
+        <meta name="viewport" content="width=device-width">
+
         <title>turbo-batman</title>
 
         <!-- bower:css -->
